syntax = "proto3";

option csharp_namespace = "ConfigurationInteraction";

package Common;

message Error {
	optional string code = 1;
	optional string message = 2;
}

message ErrorContainer {
	repeated Error errors = 1;
}

message StringList {
	repeated string values = 1;
}