syntax = "proto3";

import "Contract/Common.proto";
import "Contract/Configuration.proto";

option csharp_namespace = "ConfigurationInteraction";

package ConfigurationInteraction;

service ConfigurationServer {
	rpc LoadConfiguration (LoadConfigurationRequest) returns (LoadConfigurationResponse);
}

message LoadConfigurationRequest {
	string clientMachineName = 1;
	string clientMachineIp = 2;
}

message LoadConfigurationResponse {
	oneof bodyOrError {
		LoadConfigurationResponseBody body = 1;
		Common.ErrorContainer errorContainer = 2;
	}
}

message LoadConfigurationResponseBody {
	optional Configuration.ApplicationConfiguration app = 1;
	optional Configuration.DatabaseConfiguration database = 2;
}